--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "core-js": "^3.6.5",
     "firebase": "^9.6.6",
     "firebase-admin": "^10.0.2",
+    "quill": "^1.3.7",
+    "quill-image-resize-module": "^3.0.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
+    "vue2-editor": "^2.10.3",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
